5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1795_1598.log
== TEST (2019-05-30 16:04:53) 
-- CODE:
from numpy import *

valor = array(eval(input("Valores: ")))

i = 0

while i < size(valor):
	
	if valor[i] > 80:
		soma = sum(valor) - 80
	else:
		soma = sum(valor)
i = i + 1

print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:05:17) 
-- CODE:
from numpy import *

valor = array(eval(input("Valores: ")))

i = 0

while i < size(valor):
	
	if valor[i] > 80:
		soma = sum(valor) - 80
	else:
		soma = sum(valor)
	i = i + 1

print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:05:28) 
-- CODE:
from numpy import *

valor = array(eval(input("Valores: ")))

i = 0

while i < size(valor):
	
	if valor[i] > 80:
		soma = sum(valor) - 80
	else:
		soma = sum(valor)
	i = i + 1

print(soma)
-- EXECUTION TIME:
1.2075
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52000000000001
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:05:56) 
-- CODE:
from numpy import *

valor = array(eval(input("Valores: ")))

i = 0

while i < size(valor):
	
	if valor[i] > 80:
		soma = sum(valor) - 80
	else:
		soma = sum(valor)
	i = i + 1

print(round(soma),2)
-- EXECUTION TIME:
0.896207
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
84.0 2
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.0 2
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:05:57) 
-- CODE:
from numpy import *

valor = array(eval(input("Valores: ")))

i = 0

while i < size(valor):
	
	if valor[i] > 80:
		soma = sum(valor) - 80
	else:
		soma = sum(valor)
	i = i + 1

print(round(soma),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:06:32) 
-- CODE:
from numpy import *

valor = array(eval(input("Valores: ")))

i = 0

while i < size(valor):
	
	if valor[i] > 80:
		soma = sum(valor) - 80
	else:
		soma = sum(valor)
	i = i + 1

print(round(soma,2)
-- ERROR:
File "XXXX", line 16
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:06:45) 
-- CODE:
from numpy import *

valor = array(eval(input("Valores: ")))

i = 0

while i < size(valor):
	
	if valor[i] > 80:
		soma = sum(valor) - 80
	else:
		soma = sum(valor)
	i = i + 1

print(round(soma,2)
-- EXECUTION TIME:
0.243171
-- ERROR:
  File "/home/codebench/codes/1795/1598/main.py", line 16
    
                       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:06:48) 
-- CODE:
from numpy import *

valor = array(eval(input("Valores: ")))

i = 0

while i < size(valor):
	
	if valor[i] > 80:
		soma = sum(valor) - 80
	else:
		soma = sum(valor)
	i = i + 1

print(round(soma,2)
-- ERROR:
File "XXXX", line 16
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:07:09) 
-- CODE:
from numpy import *

valor = array(eval(input("Valores: ")))

i = 0

while i < size(valor):
	
	if valor[i] > 80:
		soma = sum(valor) - 80
	else:
		soma = sum(valor)
	i = i + 1

	print (round(soma,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:07:30) 
-- CODE:
from numpy import *

valor = array(eval(input("Valores: ")))

i = 0

while i < size(valor):
	
	if valor[i] > 80:
		soma = sum(valor) - 80
	else:
		soma = sum(valor)
	i = i + 1

print (round(soma,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:07:47) 
-- CODE:
from numpy import *

valor = array(eval(input("Valores: ")))

i = 0

while i < size(valor):
	
	if valor[i] > 80:
		soma = sum(valor) - 80
	else:
		soma = sum(valor)
	i = i + 1

print (round(soma,2))
-- EXECUTION TIME:
1.04158
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:11:02) 
-- CODE:
from numpy import *

valor = array(eval(input("Valores: ")))

i = 0

while i < size(valor):
	
	if valor[i] > 80:
		soma = sum(valor) - 80
	else:
		soma = sum(valor)
i = i + 1

print(soma)
-- EXECUTION TIME:
382.882
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:16:22) 
-- CODE:
from numpy import *

valor = array(eval(input("Valores: ")))

i = 0

while i < size(valor):
	
	if valor[i] > 80:
		soma = sum(valor) - 5
	else:
		soma = sum(valor)
	i = i + 1

print (round(soma,2))
-- EXECUTION TIME:
0.418009
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
